# dataframe

./: Cargo.toml  LICENSE  readme.md  todo.txt
dataframe-macros/: Cargo.toml
dataframe-macros/src/: lib.rs
src/: cell.rs  column.rs  dataframe.rs  dataslice.rs  expression.rs  format.rs  iterrows.rs  join.rs  lib.rs  main.rs  row.rs  sort.rs  util.rs
src/dataframe/: cell.rs  column.rs  dataframe.rs  dataslice.rs  expression.rs  format.rs  group.rs  iterrows.rs  lib.rs  row.rs  sort.rs  util.rs
tests/: integration_test.rs  new_test.csv  test.csv
tests/example/: department.csv  employee.csv  example.rs  example_from_sql.rs
