[package]
name = "rowboat"
version = "0.0.7"
edition = "2021"
authors = ["Aaron <aaronhough@trapzd.com>"]
description = "A package for working with row/column/cell structured data AKA dataframe."
repository = "https://github.com/arrno/dataframe"
homepage = "https://rebug.dev"
readme = "./readme.md"
keywords = ["dataframe", "csv", "sql", "table", "matrix"]
license = "MIT"

[lib]
name = "rowboat"
path = "src/dataframe/lib.rs"
version = "0.0.7"
edition = "2021"
description = "A package for working with row/column/cell structured data AKA dataframe.."
repository = "https://github.com/arrno/dataframe"
homepage = "https://rebug.dev"
readme = "./readme.md"
authors = ["Aaron <aaronhough@trapzd.com>"]
keywords = ["dataframe", "csv", "sql", "table", "matrix"]
license = "MIT"


[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
dataframe-macros = { version = "0.0.1", path = "./dataframe-macros" }
