[package]
name = "dataframe-macros"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/arrno/dataframe"
homepage = "https://rebug.dev"
readme = "../readme.md"
authors = ["Aaron <aaronhough@trapzd.com>"]
license = "MIT"
description = "proc macros to be used with dataframe package."

[lib]
name = "dataframe_macros"
path = "src/lib.rs"
proc-macro = true
version = "0.0.1"
repository = "https://github.com/arrno/dataframe"
homepage = "https://rebug.dev"
readme = "https://github.com/arrno/dataframe/blob/main/readme.md"
authors = ["Aaron <aaronhough@trapzd.com>"]
license = "MIT"

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.76"
